# css-mini

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/: COPYRIGHT_HEADER
.github/workflows/: deploy.yaml
css/: __init__.py  _typing.py  config.py  config.schema.json  core.py  param_estimator.py  score.py
css/serving/: __init__.py  app.py  content_types.py  decoder.py  encoder.py  errors.py  model_cache.py  utils.py
example/service_cloud_mini/: README.md  Tutorial.ipynb  config.yaml
example/service_cloud_mini/artifacts/: css-model
example/service_cloud_mini/data/: product_metrics_update.csv
infrastructure/: README.md  api.tf  ecr.tf  iam.tf  main.tf  s3.tf  terraform.tfvars
scripts/: add_copyright_header.py  build-push-ecr.sh  sync_json_schema.py
test/integration/: conftest.py  utils.py
test/integration/local_serve/: test_serve_simple.py
test/integration/remote_serve/: test_sagemaker_serve.py
test/unit/: test_import.py
